Bug 1911529 - nsStandardURL::mBasename.mLen isn't properly updated when coalescing r=necko-reviewers,kershaw

mBasename.mLen is only supposed to cover the length of the name apart from
the extension. When there is an extension, we must subtract 1 + the length of
the extension in order to get the correct basename length.

Differential Revision: https://phabricator.services.mozilla.com/D218529